[package]
name = "plugin_epic"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
libc = "0.2.186"
libloading = "0.9.0"
serde_json = "1.0"
luo9_sdk = "0.5.1"
# luo9_sdk = { path = "H:\\github\\luo9_bot\\sdk\\rust" }
reqwest = { version = "0.13.3", features = ["query"] }
tokio = "1.52.1"
ureq = "3.3.0"
